--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body{
     font-size: 16px;
 }
 
-h1, p {
+h1, p{
     margin: 1em auto;
     text-align: center;
 }
@@ -23,6 +23,7 @@ form{
 fieldset{
     border: none;
     padding: 2rem 0;
+    border-bottom: 3px solid #3b3b4f;
 }
 
 label{
