Step 41-46: added bg color, border of 1px, color green, and min height of 2em on input and textarea element

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,13 @@ input, textarea, select{
     margin: 10px 0 0;
 }
 
+input, textarea{
+    background-color: rgba(221, 191, 155, 0.229);
+    border: 1px solid rgba(197, 170, 134, 0.833);
+    color: darkgreen;
+    min-height: 2em;
+}
+
 label{
     display: block;
     margin: 0.5rem 0;
