--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ fieldset :last-of-type{
 input, textarea, select{
     width: 100%;
     margin: 10px 0 0;
+    min-height: 2em;
 }
 
 input, textarea{
